# stack-exchange-cli

./: .gitignore  LICENSE  Makefile  README.md  config.example.toml  config.toml  config.yaml  install.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  publish.yaml
scripts/: install.sh  install_ubuntu.sh  pre-commit  pre-commit.sh  setup_precommit_hook.sh
stack-exchange/: __main__.py  app.py  cache.py  commands.py  config.py  errors.py  models.py  search.py  search_client.py  singleton.py  terminal.py  tui.py  utils.py
stack_exchange/: __main__.py  _version.py  app.py  cache.py  cli.py  commands.py  errors.py  exceptions.py  models.py  search.py  utils.py
tests/: conftest.py  fixtures.py  test_cache.py  test_stack_exchange.py  test_utils.py
