[tool.poetry]
name = "stack-exchange-cli"
version = "0.3.0"
description = "Stack Exchange CLI for searching"
authors = ["Mike Davidson"]
license = "MIT"
readme = "README.md"
include = ["config.yaml"]
exclude = ["tests", "scripts"]
packages = [
    { include = "stack_exchange" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
rich = "^12.4.4"
redis = "^4.3.4"
markdownify = "^0.11.2"
PyYAML = "^6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"